<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.ivan.github.debug.DebugActivity">

        <include layout="@layout/layout_appbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">


            <TextView
                android:id="@+id/debug_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/debug_text2"
                android:visibility="gone" />

            <com.github.design.widget.FillLineTextView
                android:id="@+id/debug_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/debug_text2"
                android:visibility="gone" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector"
                    android:paddingStart="40dp"
                    android:paddingLeft="40dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/test1" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/appCompatRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector"
                    android:paddingStart="40dp"
                    android:paddingLeft="40dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/test" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="makeCrash"
                android:text="@string/crash_me"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="getPhoneInformation"
                android:text="@string/get_phone_information"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
