<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.ivan.github.app.login.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_github" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in_to_github"
                android:textColor="@color/gray_33"
                android:textSize="20sp" />

            <com.github.design.widget.CompoundDrawablesTextView
                android:id="@+id/tv_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_light_red_bg"
                android:clickable="true"
                android:drawableEnd="@drawable/selector_error_close"
                android:drawableRight="@drawable/selector_error_close"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:textColor="@color/dark_red_error"
                android:textSize="12sp"
                android:visibility="gone"
                tools:text="Incorrect username or password." />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/card_white_bg"
                android:paddingBottom="20dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/user_name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_name_or_email"
                    android:textColor="@color/gray_33"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name_label"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_edit_text_bg"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete|textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/tv_password"
                    android:nextFocusForward="@+id/tv_password"
                    android:padding="10dp"
                    android:textColor="@color/gray_33"
                    android:textSize="12sp"
                    tools:text="tom@gmail.com\nand what..." />

                <TextView
                    android:id="@+id/user_password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_username"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    android:textColor="@color/gray_33"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_username"
                    android:layout_marginTop="20dp"
                    android:gravity="end|right"
                    android:focusable="false"
                    android:text="@string/forget_password"
                    android:textColor="@color/selector_text_color_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_password_label"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_edit_text_bg"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/gray_33"
                    android:textSize="12sp"
                    tools:text="1234567787" />

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_password"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/selector_button_default"
                    android:enabled="true"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:padding="10dp"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/card_white_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_to_github"
                    android:textColor="@color/gray_33"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_create_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account"
                    android:textColor="@color/selector_text_color_blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:textColor="@color/selector_text_color_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/privacy"
                    android:textColor="@color/selector_text_color_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_security"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/security"
                    android:textColor="@color/selector_text_color_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_contact_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_github"
                    android:textColor="@color/selector_text_color_gray"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
