<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.ivan.github.app.login.LandingActivity">

    <View
        android:visibility="gone"
        android:id="@+id/status_bar_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.github.design.widget.CirclePagerIndicator
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/layout"/>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/gray_66"
        android:text="@string/sign_in"
        android:onClick="signIn"/>

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:text="@string/sign_up"
        android:onClick="signUp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:onClick="explore"
        android:padding="10dp"
        android:text="@string/explore_on_github"
        android:textColor="@color/selector_text_color_blue"
        android:textSize="12sp" />

</RelativeLayout>
